IVYPORTAL-8985 Needed features for release 8.0 III  - [Bug] Vertical scrollbar after scrolldown on case/task list
Former-commit-id: b9253fa37fcc8a40272e0bfc2cf2d0340c351b19

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -843,7 +843,6 @@ span.task-details-document-add-link {
 
 .action-steps-panel .ui-overlaypanel-content {
     padding: 0 !important;
-    width: 180px;
     display: grid;
 }
 
@@ -1795,7 +1794,6 @@ _:-ms-input-placeholder, :root a.compact-task-start-link {
 }
 
 .options-panel {
-  width: 200px;
   border-radius: 5px;
   padding: 0 !important;
 }
